--- a/index.html
+++ b/index.html
@@ -38,14 +38,10 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <div class="rounded bg-gradient-1 text-white shadow p-5 text-center mb-5">
-                        <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4">  </div>
-
-                        <h1 class="text-white mx-auto mt-2 mb-5" id="timer">
+                        <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"> 
                             <span id="timer-days"></span>
                             <span id="timer-hours"></span>
                             <span id="timer-mins"></span>
-                        </h1>
-
                     </div>
                 </div>
             </div>-
