--- a/index.html
+++ b/index.html
@@ -46,38 +46,7 @@
                 </div>
             </div>-
           </div>
-            <script>
-                var endDate = new Date("Mar 15, 2021 12:00:00").getTime();
-
-                var timer = setInterval(function() {
-
-                    let now = new Date().getTime();
-                    let t = endDate - now;
-
-                    if (t >= 0) {
-
-                        let days = Math.floor(t / (1000 * 60 * 60 * 24));
-                        let hours = Math.floor((t % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                        let mins = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60));
-                        let secs = Math.floor((t % (1000 * 60)) / 1000);
-
-                        document.getElementById("timer-days").innerHTML = days + " Days";
-
-                        document.getElementById("timer-hours").innerHTML = ("0"+hours).slice(-2) + " Hours";
-
-                        document.getElementById("timer-mins").innerHTML = ("0"+mins).slice(-2) + " Minutes";
-
-
-                    } else {
-
-                        document.getElementById("timer").innerHTML = "The countdown is over!";
-
-                    }
-
-                }, 1000);
-
-
-              </script>
+            
         </header>
 
         <!-- About-->
@@ -332,5 +301,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/countdown.js"></script>
     </body>
 </html>
